--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-youtube": "^7.12.0",
     "use-places-autocomplete": "^1.3.10"
   },
   "scripts": {
